...
            fontWeight: FontWeight.bold,
            color: Colors.green,
          ),
        ),
        const SizedBox(height: 10),
        const Text(
          'You are connected to the internet',
          style: TextStyle(fontSize: 16),
        ),
        const SizedBox(height: 30),
        OutlinedButton.icon(
          onPressed: null,
          icon: const Icon(Icons.check_circle, color: Colors.green),
...
            fontWeight: FontWeight.bold,
            color: Colors.red,
          ),
        ),
        const SizedBox(height: 10),
        const Text(
          'No internet connection available',
          style: TextStyle(fontSize: 16),
        ),
        const SizedBox(height: 30),
        ElevatedButton.icon(
          onPressed: () {
            context.read<ConnectionCubit>().checkConnection();
...
