...
            }
            return _buildEmptyListView('Select an action');
          },
        ),
      ),
      floatingActionButton: Semantics(
        label: 'Create new event',
        child: FloatingActionButton(
          key: keys.eventListPage.addEventButton,
          onPressed: () async {
            final result = await Navigator.push(
              context,
              MaterialPageRoute<bool>(builder: (context) => const EventForm()),
...
