...
      context: context,
      barrierDismissible: false,
      builder: (context) {
        return AlertDialog(
          key: keys.gpsPage.successDialog,
          title: const Text('Success!'),
          content: const Text('You have reached the waypoint!'),
          backgroundColor: Colors.green[100],
          actions: <Widget>[
            TextButton(
              child: const Text('Continue'),
              onPressed: () {
                _cancelLocationSubscription();
...
