appId: io.github.zoskar.testlab
# airplane not available on iOS
# https://docs.maestro.dev/api-reference/commands/setairplanemode
onFlowComplete:
  - setAirplaneMode: disabled

---
- launchApp
- setAirplaneMode: enabled
- tapOn: "Connection"
- assertVisible: "No internet connection available"
- setAirplaneMode: disabled
- assertVisible: "You are connected to the internet"
