appId: io.github.zoskar.testlab
tags:
  - ios

onFlowStart:
  - runScript: scripts/createEvent.js

onFlowComplete:
  - runScript: scripts/deleteEvent.js

---
- launchApp
- tapOn: "Forms"
- assertVisible: ".*ui test event.*"
#d: none of the selectors worked on another system
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          # "Show menu" was not tappable on Android
          rightOf: ".*Online.*" #d: !!!!
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Show menu"
- tapOn: "Delete"
- tapOn: "DELETE"
