appId: io.github.zoskar.testlab
tags:
  - ios

onFlowStart:
  - runScript: scripts/createEvent.js

onFlowComplete:
  - runScript: scripts/deleteEvent.js

---
- launchApp
- tapOn: "Forms"
- assertVisible: ".*ui test event.*"
# different behavior for iOS and Android
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          rightOf: ".*Online.*"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Show menu"
- tapOn: "Edit"
- tapOn: "Is this an online event?"
- tapOn: "Update Event"
- assertVisible: ".*In Person.*" #d: maestro studio
