appId: io.github.zoskar.testlab
tags:
    - ios
---
- runFlow:
      commands:
          - launchApp:
                clearState: true
                permissions:
                    all: unset #d: defaults to allow, confusing
- tapOn: "GPS"
- runFlow:
      when:
          platform: Android
      commands:
          - tapOn: "Only this time"
- runFlow:
      when:
          platform: iOS
      commands:
          - tapOn: "Allow Once"
- travel:
      points:
          - 51.249579,22.569733
          - 51.247619,22.566694
      speed: 1

- assertVisible: "You have reached the waypoint!"
