appId: io.github.zoskar.testlab
tags:
  - ios
---
- launchApp
- tapOn: "Login"
- tapOn: "Email"
- inputText: abc@wp.pl
- tapOn: "Password"
- inputText: abc@wp.pl
- tapOn: # index was not needed on Android (different indexes - header)
    text: "Login"
    index: 1
- tapOn: "Logout"
- assertVisible: "You are logged in!"
- tapOn: "Go Back"
- assertVisible: "Logout"
